fix(platform): restore @deprecated + symlink jvm.config files + remove dead env var (#289)
Co-authored-by: Emilio <emilio@local>